# nl2sql-chatbot

./: README.md  main.py  pyproject.toml
agent/: langchain_agent.py
data/: schema.txt
db/: init.sql  sample.db
utils/: logger.py  query_executor.py
vectorstore/chroma/: chroma.sqlite3
